[package]
name = "client"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = "1.0.106"
serde_derive = "1"
web_logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = { version = "0.14.0", features = ["web_sys"] }
yew-router = {version = "0.11.0", features = ["web_sys"] }
anyhow = "1.0.28"
serde_json = "1.0.51"
wasm-bindgen = "0.2.60"
common = { path = "../common" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "KeyboardEvent",
  "HtmlInputElement",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
]
