[package]
name = "akshar_owo"
version = "0.1.0"
authors = ["Codadillo <leoconr@nuevaschool.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.3.0"
actix-web = "2.0.0"
actix-rt = "1.1.0"
actix-cors = "0.2.0"
serde = "1.0.106"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
env_logger = "0.7.1"
serde_json = "1.0.51"

[dependencies.common]
path = "../common"
